Feat: add employee model and performed some query on it

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h4>Has_one associations</h4>
+<% @department.each do |d| %>
+  <%= d.name %>
+  <%= link_to "My profile", profile_page_path(d.id) %>
+<% end %>
